concord_macros/tests/v5/dsl/fail/fail_part_removed.rs
use concord_core::prelude::*;
use concord_macros::api;

api! {
    client PartRemovedApi { base https "example.com" }

    GET Broken(id: u64)
        path [part["u-", id]]
        -> Json<String>
}

fn main() {}
