concord_macros/tests/v5/dsl/fail/fail_part_removed.stderr
error: part[...] was renamed to fmt[...] in v5
 --> tests/v5/dsl/fail/fail_part_removed.rs:8:15
  |
8 |         path [part["u-", id]]
  |               ^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/v5/dsl/fail/fail_part_removed.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
